--- a/client/style/main.css
+++ b/client/style/main.css
@@ -62,3 +62,7 @@ div .hand-main {
     display: inline-block;
     vertical-align: top;
 }
+
+.custom-overlay {
+    background: rgba(0, 0, 0, 0.2);
+}
